Fix margin for list items in .w-richtext to ensure consistent alignment

--- a/global.css
+++ b/global.css
@@ -32,6 +32,7 @@ input[type=number] {
 }
 
 .w-richtext ul li {
+	margin-inline-start: 16px;
 	padding-inline-start: 8px;
 }
 
